--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3100:3100"
     volumes:
       - ./loki-config.yml:/etc/loki/local-config.yaml
+      - ./loki-wal:/wal  
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - plg-networks
@@ -38,6 +39,7 @@ services:
 
 volumes:
   grafana-storage:
+  loki-wal:
 
 networks:
   plg-networks:
