--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,8 @@
 server {
     listen 80;
-    server_name your.loki.server;  # Loki 서버 도메인 또는 IP
 
     location /loki/ {
-        proxy_pass http://localhost:3100;  # Loki의 실제 포트 (보통 3100)
+        proxy_pass http://loki:3100;  # Loki의 실제 포트 (보통 3100)
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
