--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,26 @@
-server {
-    listen 80;
+http{
+    server {
+        listen 80;
 
-    location /loki/ {
-        proxy_pass http://loki:3100;  # Loki의 실제 포트 (보통 3100)
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
+        location /loki/ {
+            proxy_pass http://loki:3100;  # Loki의 실제 포트 (보통 3100)
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
 
-        # CORS 설정
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-
-        # OPTIONS 요청에 대한 허용 처리
-        if ($request_method = 'OPTIONS') {
+            # CORS 설정
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-            return 204;
+
+            # OPTIONS 요청에 대한 허용 처리
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                return 204;
+            }
         }
     }
 }
