--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,13 @@ http{
             # CORS 설정
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+            add_header 'Access-Control-Allow-Headers' '*';
 
             # OPTIONS 요청에 대한 허용 처리
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                add_header 'Access-Control-Allow-Headers' '*';
                 return 204;
             }
         }
