--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,17 +12,18 @@ http{
             proxy_set_header Host $host;
 
             # CORS 설정
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' '*';
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Content-Type' 'application/json' always;
 
             # OPTIONS 요청에 대한 허용 처리
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Max-Age' 86400;
                 return 204;
             }
+
         }
     }
 }
