--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ http{
     server {
         listen 80;
 
-        location /loki/ {
+        location / {
             proxy_pass http://loki:3100;  # Loki의 실제 포트 (보통 3100)
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
