--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,26 +4,28 @@ http{
     server {
         listen 80;
 
+
         location / {
-            proxy_pass http://loki:3100;  # Loki의 실제 포트 (보통 3100)
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                return 204;
+            }
+
+            proxy_pass http://loki:3100;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
 
-            # CORS 설정
+            add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Content-Type' 'application/json' always;
-
-            # OPTIONS 요청에 대한 허용 처리
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' '*';
-                add_header 'Access-Control-Max-Age' 86400;
-                return 204;
-            }
-
+            proxy_set_header Origin "";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+
     }
 }
