--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,12 +17,14 @@ http {
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method",
+            "Access-Control-Request-Headers", "Authorization", "baggage", "content-type", "sentry-trace' always;
 
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method",
+            "Access-Control-Request-Headers", "Authorization", "baggage", "content-type", "sentry-trace';
                 add_header 'Access-Control-Allow-Credentials' 'true';
                 return 204;
             }
