--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,17 +14,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             # CORS 설정
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Headers' $http_access_control_request_headers;
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method",
-            "Access-Control-Request-Headers", "Authorization", "baggage", "content-type", "sentry-trace' always;
+            add_header 'Access-Control-Allow-Credentials' 'true';
 
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method",
-            "Access-Control-Request-Headers", "Authorization", "baggage", "content-type", "sentry-trace';
+                add_header 'Access-Control-Allow-Headers' $http_access_control_request_headers;
                 add_header 'Access-Control-Allow-Credentials' 'true';
                 return 204;
             }
