--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,24 +6,18 @@ http {
 
         location / {
             proxy_pass http://loki:3100;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             # CORS 설정
             add_header 'Access-Control-Allow-Headers' $http_access_control_request_headers;
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS' always;
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
 
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' $http_access_control_request_headers;
-                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' $http_access_control_request_headers always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
                 return 204;
             }
         }
